test/errors/auto_cast_int_to_string.haste
const a: string = cast 42;
